--- a/src/app/pages/calendario/index/date-modal/date-modal.component.html
+++ b/src/app/pages/calendario/index/date-modal/date-modal.component.html
@@ -1,6 +1,9 @@
 <div #eventosColapsados class="modal-content">
   <div class="modal-header border-0">
     <h5 class="modal-title" id="dateModalLabel"><i class="fas fa-circle" style="color: #13D52A"></i> {{ selectedDate | date: 'dd/MM/yyyy' }}</h5>
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="cerrarModal()">
+      <span aria-hidden="true">&times;</span>
+    </button>
   </div>
   <div class="modal-body">
     <div *ngIf="showEventInfo">
@@ -22,7 +25,7 @@
                       <i class="fas fa-edit text-primary"></i>
                     </a>
                   </li>
-                  <li class="list-group-item border-0 bg-light"><p class="font-weight-bold mb-1">Hora:</p> {{ event.calendario.fecha | date: 'h:m a' }}</li>
+                  <li class="list-group-item border-0 bg-light"><p class="font-weight-bold mb-1">Hora:</p> {{ event.calendario.fecha | date: 'h:mm a' }}</li>
                   <li class="list-group-item border-0 bg-light"><p class="font-weight-bold mb-1">Paciente:</p> <a>{{ event.calendario.paciente.pacientable?.nombre }} {{ event.calendario.paciente.pacientable?.paterno }} {{ event.calendario.paciente.pacientable?.materno }}</a></li>
                   <li class="list-group-item border-0 bg-light"><p class="font-weight-bold mb-1">Profesional:</p> {{ event.calendario.profesional?.nombre }} {{ event.calendario.profesional?.paterno }} {{ event.calendario.profesional?.materno }}</li>
                   <li class="list-group-item border-0 bg-light"><p class="font-weight-bold mb-1">Motivo:</p> {{ event.calendario.motivo }} <br></li>
@@ -68,7 +71,9 @@
             <label class="col-form-label">
                 Hora
             </label>
-            <input type="time" class="form-control" name="hora" id="hora" [(ngModel)]="hora">
+            <select class="form-control" id="horario" name="horario" [(ngModel)]="hora">
+              <option *ngFor="let horario of horariosDisponibles" [value]="horario">{{ horario }}</option>
+            </select>
         </div>
         </div>
         <!-- Botones para guardar o cancelar la cita -->
