--- a/src/styles.css
+++ b/src/styles.css
@@ -39,3 +39,10 @@ a {
     border-color: #c72158;
     color: #fff;
 }
+
+.img-circle{
+    background-color: white;
+    box-shadow:
+    0 0 0 1px white,
+    0 0 0 2px black;
+}
