--- a/src/app/pages/historiales-medicos/show/show.component.html
+++ b/src/app/pages/historiales-medicos/show/show.component.html
@@ -137,14 +137,40 @@
                         </div>
                       </div>
                       <div class="py-2 col-12">
-                        <div class="d-flex justify-content-between border-bottom py-2">
+                        <div class="d-flex justify-content-between py-2">
                           <div>
-                            <b>Archivo</b>
+                            <b>Archivos</b>
                           </div>
                           <div>
                             <div class="form-group">
                               <input type="file" class="form-control-file" id="archivo" (change)="archivosSeleccionados($event)" formControlName="archivos" accept="image/png, image/jpeg, application/pdf" multiple>
                             </div>
+                          </div>
+                        </div>
+                        <div class="border-bottom py-2">
+                          <div *ngIf="archivos.length > 0">
+                            <table class="table table-sm table-light">
+                              <thead>
+                                <tr>
+                                  <th scope="col" class="text-secondary">Archivo</th>
+                                  <th scope="col" class="text-secondary">Tamaño</th>
+                                  <th scope="col"></th>
+                                </tr>
+                              </thead>
+                              <tbody>
+                                <ng-container *ngFor="let archivo of archivos; let i = index">
+                                  <tr>
+                                    <td class="align-middle">{{ archivo.nombre }}</td>
+                                    <td class="align-middle">{{ archivo.tamano }}</td>
+                                    <td width="10px">
+                                      <button class="btn btn-sm btn-danger" (click)="eliminarArchivo(i)">
+                                        <i class="fas fa-trash"></i>
+                                      </button>
+                                    </td>
+                                  </tr>
+                                </ng-container>
+                              </tbody>
+                            </table>
                           </div>
                         </div>
                       </div>
@@ -268,12 +294,12 @@
 
                               <div class="py-2 col-12" *ngIf="examen?.descripcion">
                                 <div class="d-flex pt-2">
-                                    <div>
+                                  <div>
                                     <b>Archivos</b>
-                                    </div>
+                                  </div>
                                 </div>
-                                <div *ngFor="let archivo of examen.archivos; let i = index">
-                                  <button class="btn btn-info py-3 mr-2" (click)="abrirArchivo(archivo.url)">
+                                <div *ngFor="let archivo of examen.archivos; let i = index" class="d-inline-block m-1">
+                                  <button class="btn btn-info py-3" (click)="abrirArchivo(archivo.url)">
                                     <img src="assets/icons/archivoMedico.svg" alt="Carpeta" width="35px">
                                   </button>
                                 </div>
